--- a/TwitterClient/Resources/Base.lproj/Main.storyboard
+++ b/TwitterClient/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dQ0-Gw-LyF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0gq-aJ-7gi">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -33,6 +33,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ARU-yT-MSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="277" y="51"/>
+        </scene>
+        <!--Initial View Controller-->
+        <scene sceneID="az8-cy-Mpg">
+            <objects>
+                <viewController id="0gq-aJ-7gi" customClass="TCInitialViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TFN-aZ-qu0"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZBv-By-vkE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WF2-vG-aqc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="dQ0-Gw-LyF" kind="show" identifier="TimeLineSegue" animates="NO" id="nib-vv-d6k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KBu-vR-PhG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1263" y="51"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="W4H-PB-nI9">
