--- a/TwitterClient/Resources/Base.lproj/Main.storyboard
+++ b/TwitterClient/Resources/Base.lproj/Main.storyboard
@@ -38,6 +38,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="OZa-nc-O8t"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="m84-sP-EJZ">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshContent:" destination="PIc-34-oKA" eventType="valueChanged" id="U8K-et-QFr"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ARU-yT-MSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
