--- a/TwitterClient/Resources/Base.lproj/Main.storyboard
+++ b/TwitterClient/Resources/Base.lproj/Main.storyboard
@@ -73,7 +73,13 @@
                             <outlet property="delegate" destination="PIc-34-oKA" id="FIs-OS-zwM"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="OZa-nc-O8t"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="OZa-nc-O8t">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="dOw-EP-KLj">
+                            <connections>
+                                <action selector="composeTweet:" destination="PIc-34-oKA" id="Ira-Hz-ed1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="m84-sP-EJZ">
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
